--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": false,
+    "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "moduleResolution": "Node",
-    "noEmit": true,
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
