--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "vite-plugin-linter",
   "description": "Plugin for linting files with Vite",
   "license": "MIT",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "devDependencies": {
+  "dependencies": {
     "@rollup/pluginutils": "4.1.0",
+    "eslint": "7.27.0",
+    "typescript": "4.2.4"
+  },
+  "devDependencies": {
     "@types/eslint": "7.2.11",
     "@types/node": "15.6.0",
-    "eslint": "7.27.0",
     "prettier": "2.3.0",
-    "typescript": "4.2.4",
     "vite": "2.3.3"
   },
   "homepage": "https://bitbucket.org/unimorphic/vite-plugin-linter",
