--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,17 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "lib": ["DOM", "DOM.Iterable", "es5"],
     "module": "commonjs",
     "moduleResolution": "Node",
     "outDir": "./dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es5",
+    "target": "ESNext",
   },
   "include": ["./src"]
 }
