--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@rollup/pluginutils": "4.1.0",
-    "@types/eslint": "7.2.11",
+    "@rollup/pluginutils": "4.1.1",
+    "@types/eslint": "7.28.1",
     "eslint": "7.27.0",
-    "typescript": "4.2.4"
+    "typescript": "4.4.3"
   },
   "devDependencies": {
-    "@types/node": "15.6.0",
-    "prettier": "2.3.0",
-    "vite": "2.3.3"
+    "@types/node": "16.10.3",
+    "prettier": "2.4.1",
+    "rollup": "2.58.0",
+    "vite": "2.6.5"
   },
   "homepage": "https://bitbucket.org/unimorphic/vite-plugin-linter",
   "keywords": [
