--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2017",
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["./src"]
 }
