--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-linter",
   "description": "Plugin for linting files with Vite",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rollup/pluginutils": "4.1.1",
     "@types/eslint": "7.28.1",
+    "chokidar": "3.5.3",
     "eslint": "7.27.0",
     "typescript": "4.4.3"
   },
