--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "vite-plugin-linter",
   "description": "Plugin for linting files with Vite",
   "license": "MIT",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "scripts": {
-    "build": "tsc",
+    "build": "unbuild",
     "prepare": "npm run build"
   },
-  "bin": "./dist/lintCommand.js",
+  "bin": "./dist/lintCommand.mjs",
   "dependencies": {
-    "@rollup/pluginutils": "5.0.2",
-    "@types/eslint": "8.44.2",
+    "@rollup/pluginutils": "5.1.0",
+    "@types/eslint": "8.56.2",
     "chokidar": "3.5.3",
-    "eslint": "8.46.0",
-    "typescript": "5.1.6"
+    "eslint": "8.56.0",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/node": "20.4.8",
-    "prettier": "3.0.1",
-    "rollup": "3.27.2",
-    "vite": "4.4.8"
+    "@types/node": "20.11.5",
+    "prettier": "3.2.4",
+    "rollup": "4.9.6",
+    "unbuild": "2.0.0",
+    "vite": "5.0.12"
   },
   "homepage": "https://bitbucket.org/unimorphic/vite-plugin-linter",
   "keywords": [
@@ -27,7 +28,8 @@
     "typescript",
     "vite-plugin"
   ],
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "repository": {
     "type": "git",
     "url": "https://unimorphic@bitbucket.org/unimorphic/vite-plugin-linter.git"
