--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "module": "commonjs",
-    "moduleResolution": "Node",
+    "module": "ES2020",
+    "moduleResolution": "bundler",
     "outDir": "./dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2017",
+    "target": "ES2020",
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["./src"]
